Fix QToolBar in Palette Windows
Allows the border to show under QToolBar.

Add clarity to QScrollBar handle (light).

--- a/stuff/config/qss/Default/less/layouts/palette.less
+++ b/stuff/config/qss/Default/less/layouts/palette.less
@@ -21,7 +21,7 @@
   margin: 0;
   &::tab {
     &:extend(.tab-flat all);
-    &::first {
+    &:first {
       border-left: 1 solid @accent;
     }
   }
@@ -113,7 +113,7 @@ PaletteViewer {
       margin: 0; // very compact space so we remove margin
     }
     & QToolButton {
-      &:extend(.button-flat all); // Use flat button style
+      &:extend(.button-flat all);
       margin: 0;
       padding: 2 0 2 0;
 
@@ -128,6 +128,9 @@ PaletteViewer {
 #PaletteTabBar {
   &::tab {
     &:extend(.tab-flat all);
+    padding-bottom: 4;  // allow QToolBar's bottom border to show
+                        // since default tab padding is 3 (vert)
+                        // this adds 1 extra (3+1)
   }
 }
 
